consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-deployment
  labels:
    app: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer
          image: ziedmeddeb123/consumer:v1.0
          ports:
            - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: consumer-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: consumer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30002
