kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: strimzi/kafka:0.19.0-kafka-2.5.0
          command: ["sh", "-c", "bin/kafka-server-start.sh config/server.properties --override listeners=$KAFKA_LISTENERS --override advertised.listeners=$KAFKA_ADVERTISED_LISTENERS --override zookeeper.connect=$KAFKA_ZOOKEEPER_CONNECT"]
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
  selector:
    app: kafka
