vue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-deployment
  labels:
    app: front-vue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-vue
  template:
    metadata:
      labels:
        app: front-vue
    spec:
      containers:
        - name: front-vue
          image: ziedmeddeb123/front-vue:v1.1
          ports:
            - containerPort: 5173

---

apiVersion: v1
kind: Service
metadata:
  name: vue-service
spec:
  type: LoadBalancer
  selector:
    app: front-vue
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
      nodePort: 30100
