ingress-back.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ingress
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization,Content-Type"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Authorization"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://app.mapping-json.com"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - api.mapping-json.com
    secretName: secret-tls
  rules:
  - host: api.mapping-json.com
    http:
      paths:
      - path: /consumer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: consumer-service
            port:
              number: 8081
      - path: /producer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: producer-service
            port:
              number: 8082
