ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization,Content-Type"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Authorization"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://app.mapping-json.com"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - app.mapping-json.com
    secretName: secret-tls
  rules:
  - host: app.mapping-json.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue-service
            port:
              number: 80
